Fix text alignment of task-editor-list

--- a/src/style.css
+++ b/src/style.css
@@ -372,6 +372,7 @@ main {
   background-color: rgba(0,0,0,0);
   border: none;
   color: gray;
+  text-align: right;
 }
 
 .empty-task-list-dialog {
